<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSurface">

    <HorizontalScrollView
        android:id="@+id/scroll_chips"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:paddingHorizontal="@dimen/spacing_md"
        android:paddingVertical="@dimen/spacing_sm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:singleSelection="true"
            app:selectionRequired="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_filter_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chip_all"
                android:checked="true"
                style="@style/Widget.Material3.Chip.Filter" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_filter_pending"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chip_pending"
                style="@style/Widget.Material3.Chip.Filter" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_filter_verified"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chip_verified"
                style="@style/Widget.Material3.Chip.Filter" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_filter_suspended"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chip_suspended"
                style="@style/Widget.Material3.Chip.Filter" />

        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>

    <View
        android:id="@+id/divider_filter"
        android:layout_width="0dp"
        android:layout_height="@dimen/divider_height"
        android:background="@color/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scroll_chips" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider_filter" />

    <TextView
        android:id="@+id/tv_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_employers"
        android:textAppearance="?attr/textAppearanceBodyLarge"
        android:textColor="@color/text_secondary"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider_filter" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_employers"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingTop="@dimen/spacing_xs"
        android:paddingBottom="@dimen/spacing_xxl"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider_filter" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_employer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="@dimen/fab_margin"
        android:contentDescription="@string/fab_add_employer"
        android:src="@android:drawable/ic_input_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
